--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1>Module 4 Solution by Juliana DeCarvalho Sutherland</h1>
+  <p> This was the solution to the harder assigment for [Module 4 Solution](https://julianadecarvalho.github.io/module4-solution/). 
+    
+      To see the Javascript code in action, 
+      Step 1 - go to [this page](https://julianadecarvalho.github.io/module4-solution/) 
+      Step 2 - use the dev tool on chrome with a right click 
+      Step 3 - choose the option inspect and click on the console option
+      Step 4 - you should see a an output of hello or goodbyes + name depeding on if the name start with the letter j or J. this happens as the program loops over the array of names. 
+  </p>
 </body>
 </html>
