--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>Module 4 Solution by Juliana DeCarvalho Sutherland</h1>
-  <h3> This was the solution to the harder assigment for [Module 4 Solution](https://julianadecarvalho.github.io/module4-solution/). 
+  <h3> This was the solution to the harder assigment for <a href="https://julianadecarvalho.github.io/module4-solution/">Module 4 Solution</a> 
   </h3>
   
   <h4>To see the Javascript code in action: </4>
