--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
   <ul>
     
-  <li> Step 1 - use the dev tool on chrome with a right click</li>     
+  <li> Step 1 - On your Chrome Browser use the dev tool by mouse right clicking. If youre on a mac, hold the control button and click </li>     
   <li> Step 2 - choose the option inspect and click on the console option</li>    
   <li> Step 3 - you should see a an output of hello or goodbyes + name depending on if the name start with the letter j or J. this happens as the program loops over the array of names.</li>
 
