--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   </h3>
   
   <h4>To see the Javascript code in action: </h4>
-  <ul>   
-  <li> Step 1 - On your Chrome Browser use the dev tool by mouse right clicking. If youre on a mac, hold the control button and click </li>     
+    <ul>   
+  <li> Step 1 - On your Chrome browser access the dev tool with a right click. If youre on a mac, hold the control button and click </li>     
   <li> Step 2 - choose the option inspect and click on the console option</li>    
   <li> Step 3 - you should see a an output of hello or goodbyes + name depending on if the name start with the letter j or J. this happens as the program loops over the array of names.</li>
-  </ul> 
+    </ul> 
  
 </body>
 </html>
