--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
   </h3>
   
   <h4>To see the Javascript code in action: </h4>
-    <ul>   
-  <li> Step 1 - On your Chrome browser access the dev tool with a right click. If youre on a mac, hold the control button and click </li>     
-  <li> Step 2 - choose the option inspect follow by clicking on the console option</li>    
-  <li> Step 3 - you should see a an output of hello or goodbyes + name depending on if the name start with the letter j or J. this happens as the program loops over the array of names.</li>
+    <ul>
+  <li> Step 1 - On your Chrome browser access the dev tool with a right click. If you're on a mac, hold the control button and click </li>     
+  <li> Step 2 - Once the menu pops up click on the option inspect 
+  <li> Step 3 - Follow by clicking on the console option(usually located up at the top to the right of elements)</li>   
+  <li> Step 4 - you should see a an output of hello or goodbyes + name depending on if the name start with the letter j or J. this happens as the program loops over the array of names.</li>
     </ul> 
  
 </body>
