--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="script.js"></script>
   <style>
     ul li { margin-bottom: 10px; }
-
+</style>
 </head>
 <body>
   <h1>Module 4 Solution by Juliana DeCarvalho Sutherland</h1>
@@ -23,8 +23,8 @@
   <li> Step 1 - On your Chrome browser access the dev tool with a right click. If you're on a mac, hold the control button and click </li>     
   <li> Step 2 - Once the menu pops up click on the option inspect 
   <li> Step 3 - Follow by clicking on the console option(usually located up at the top to the right of elements)</li>   
-  <li> Step 4 - you should see a an output of hello or goodbyes + name depending on if the name start with the letter j or J. this happens as the program loops over the array of names.</li>
+  <li> Step 4 - you should see a an output of hello or goodbyes + name depending on if the name start with the letter j or J. This happens as the program loops over the array of names.</li>
     </ul> 
-</style>
+
 </body>
 </html>
