--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <h4>To see the Javascript code in action: </h4>
     <ul>
   <li> Step 1 - On your Chrome browser access the dev tool with a right click. If you're on a mac, hold the control button and click </li>     
-  <li> Step 2 - Once the menu pops up click on the option inspect 
+  <li> Step 2 - Once the menu pops up click on the option inspect </li>
   <li> Step 3 - Follow by clicking on the console option(usually located up at the top to the right of elements)</li>   
-  <li> Step 4 - you should see a an output of hello or goodbyes + name depending on if the name start with the letter j or J. This happens as the program loops over the array of names.</li>
+  <li> Step 4 - You should see a an output of hello or goodbyes + name depending on if the name start with the letter j or J. This happens as the program loops over the array of names.</li>
     </ul> 
 
 </body>
