--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
 </head>
 <body>
   <h1>Module 4 Solution by Juliana DeCarvalho Sutherland</h1>
-  <h3> This was the solution to the <a href="https://github.com/jhu-ep-coursera/fullstack-course4/tree/master/assignments/assignment4/assignment4-solution-starter/harder">Module 4 harder assigment</a> 
-  </h3>
-  
+  <p> This was the solution to the <a href="https://github.com/jhu-ep-coursera/fullstack-course4/tree/master/assignments/assignment4/assignment4-solution-starter/harder">Module 4 harder assigment</a> 
+  </p>
   <h4>To see the Javascript code in action: </h4>
-    <ul>
-  <li> Step 1 - On your Chrome browser access the dev tool with a right click. If you're on a mac, hold the control button and click </li>     
-  <li> Step 2 - Once the menu pops up click on the option inspect </li>
-  <li> Step 3 - Follow by clicking on the console option(usually located up at the top to the right of elements)</li>   
-  <li> Step 4 - You should see a an output of hello or goodbyes + name depending on if the name start with the letter j or J. This happens as the program loops over the array of names.</li>
-    </ul> 
+  <ul>
+    <li> Step 1 - On your Chrome browser access the dev tool with a right click. If you're on a mac, hold the control button and click </li>     
+    <li> Step 2 - Once the menu pops up click on the option inspect </li>
+    <li> Step 3 - Follow by clicking on the console option (usually located up at the top to the right of elements)</li>   
+    <li> Step 4 - You should see a an output of hello or goodbyes + name depending on if the name start with the letter j or J. This happens as the program loops over the array of names.</li>
+   </ul> 
 
 </body>
 </html>
